--- a/socket.html
+++ b/socket.html
@@ -44,7 +44,7 @@
     
     <script>
         // 连接到WebSocket服务器
-        const socket = io('http://localhost:5000');
+        const socket = io('http://8.222.155.238:8080');
         
         // 连接事件
         socket.on('connect', () => {
